assets/sass/outdoors/_presentation.scss
/* ... */
#content {
  color:#4d4d4f;
  font-family:$regular;
}

.menu-sears-ribbon-container, .menu-kmart-ribbon-container {
  position:relative;
  z-index:100;
}

#container, #persistent-header {
  background:transparent image-url("#{$outdoor-img}background_container-noise.jpg") repeat 0px 0px;
}

#container {
  @include box-shadow(rgba(0,0,0,.75) 0 10px 21px 14px);
  padding:0px 10px;
}

.content-container {
  .content-header {
    h3 {
      font-family:$condensed;
      font-weight:700;
    }
  }
}

.sears a, .sears a:visited, .sears a:hover {
  color:#067bb5;
}

#content > section.span12 {
  border-top:none;
}

.single .span12 > .span8 .dropzone-inner-wrapper > .image-widget .content-body,
.dropzones.span12 > .dropzone > .dropzone-inner-wrapper > .content-container.image-widget .content-body {
  border:none;
  text-align:center;
}

.menu-odssubnavigation.content-container {
  .content-body {
    border:none;
  }
}

.hero-slider.content-container {
  .content-body {
    border:none;
  }
}

.category-outdoors .subnav-items{

	text-align: center;
}

#menu-odssubnavigation {
	
	display: inline-block;
	margin: 0 auto;
	
	zoom: 1;
	*display: inline;
	
  li {
    a, a:visited, a:hover {
      color:#067bb5;
    }
    a:hover {
      text-decoration:none;
    }
    font-family:$regular;
    font-size:font-size(24);
    font-weight:300;
    float:left;
    margin-right: 20px;
   // width:13%;
  }
  li:first-child {
    text-align:left;
  }
  .ods_nav_guides {
    text-align:right;
  }
  .ods_nav_questions {
   // width:28%;
  }
  .ods_nav_blog {
  	// width: 25%;
  }
  .category-outdoorstyle & .ods_nav_home {
    font-weight:400;
    a, a:visited, a:hover {
      border-bottom:solid 1px #e78e60;
      color:#666666;
    }
  }
}

.category-outdoorstyle[class*="post-type-"] #menu-odssubnavigation li.ods_nav_home {
  a, a:visited, a:hover {
    border-bottom:none;
    color:#067bb5;
    font-weight:300;
  }
}

.archive_posts #menu-odssubnavigation li.ods_nav_blog, .single-post #menu-odssubnavigation li.ods_nav_blog,
.archive_questions #menu-odssubnavigation li.ods_nav_questions, .single-question #menu-odssubnavigation li.ods_nav_questions,
.archive_guides #menu-odssubnavigation li.ods_nav_guides, .single-guide #menu-odssubnavigation li.ods_nav_guides {
  a, a:visited, a:hover {
    border-bottom:solid 1px #e78e60;
    color:#666666;
    font-weight:400;
  }
}



.results-list .content-container, .content-container.featured-post {
  margin-top:1.54em;
  .content-header {
    background-color:#4d4d4f;
    border:none;
    font-family:$condensed;
    font-weight:700;
    left:1px;
    padding:0.5em 0.769em;
    position:absolute;
    top:1px;
    h3 {
      color:#ffffff;
      font-size:font-size(16);
      text-transform:uppercase;
    }
  }
  .content-body {
    background:#ffffff;
    border:solid 1px #e3e1e1;
    padding:0px;
  }
}

.content-body {
  .content-headline {
    border-bottom:solid 2px #4d4d4f;
    font-family:$condensed;
    font-size:font-size(27);
    padding-bottom:0.37em;
    a, a:visited, a:hover {
      color:#4d4d4f;
    }
  }
  .results-list & .featured-image + .span6, .results-list & .content-video + .span6, .featured-content,
  .results-list & .featured-image + .span12, .results-list & .content-video + .span12 {
    @include box-sizing(border-box);
    padding:0.769em;
  }
}

.span12 > .content-body {
  .featured-image + .featured-content, .featured-image + .span6, .content-video + .span6 {
    padding-left:0px;
  }
}

.post-actions {
    margin: 0 -0.5em;
}

.format-video.content-container {
  .content-header {
    display:none;
  }
}

.featured-question.content-container {
  .content-body {
    padding:3.7em 0.769em 0.769em;
    h1 a {
      &:before {
        content: "\201C";
      }
      &:after {
        content: "\201D";
      }
    }
  }
}

.addthis.dropmenu .sharebutton {
  font-family:$condensed;
}

// Shit in right rail
.span4 .dropzone-inner-wrapper.border-left {
  .content-container {
    .content-header {
      border-top:none;
      h3 {
        font-family:$regular;
        font-size:font-size(20);
        font-weight:300;
      }
      h4 {
        font-family:$regular;
        font-size:font-size(12);
        font-weight:400;
      }
    }
    .content-body {
      
    }
  }
}

.dropzones.span12 > .dropzone > .dropzone-inner-wrapper.border-left > .content-container.image-widget .content-body {
  border-top:solid 1px #dedede;
}
.widget_polls-widget {
  .wp-polls {
    .wp-polls-form {
      .content-header {
        p {
          font-style:normal;
          font-weight:700;
          padding:0px 0.83em 0em;
        }
      }
    }
    .content-header {
      padding:0px;
      h1, p {
        padding:0.769em;
      }
      h1 {
        font-family:$regular;
        font-size:font-size(20);
        font-weight:400;
        padding:0.5em 0.5em 0;
      }
      h1.content-headline {
        color:#2b2b2b;
      }
      p {
        padding:0.83em 0.83em 0;
      }
      p + h1 {
        margin-bottom:0;
        padding-bottom:0;
        padding-top:0;
      }
      h3 + p {
        margin-top:0px;
      }
      h3 {
        border-bottom:solid 1px #dedede; 
        font-family:$regular;
        font-weight:300;
        padding:0.5em; 
        word-spacing:0px;
        span {
          font-weight:300;
        }
      }
    }
    .content-body {
      border-top:none;
    }
  }
  .results {
    li {
      span + span + span {
        padding-top:2em;
        text-align:center;
      }
    }
    li:nth-child(odd) {
      background-color:#ebedee;
    }
  }
}

.communities_menu_widget .subnav-items li {
  padding:3px 0px;
}

.sears .content-container .wp-polls {
  .info, .total {
    border:none;
    & > div:first-child {
      margin-left:0;
    }
  }

  .bar {
    background-color:#067bb5;
  }
  li span:first-child {
    color: #666666;
    font-family:$regular;
    font-size:font-size(18);
    font-weight:400;
  }
}
/* ... */

